@@ -1,3 +1,12 @@
+2010-08-31  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-sum.el (gnus-summary-stop-at-end-of-message)
+	* gnus.el (gnus-valid-select-methods)
+	* message.el (message-send-mail-partially-limit)
+	* mm-decode.el (mm-text-html-renderer)
+	* mml.el (mml-insert-mime-headers-always)
+	* smiley.el (smiley-regexp-alist): Bump custom version.
+
 2010-08-31  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* gnus-html.el: require mm-url.
